--- a/Sparc2/Sparc2/wwwroot/css/app.css
+++ b/Sparc2/Sparc2/wwwroot/css/app.css
@@ -6,7 +6,7 @@
   --gray-200: #D1D1D1;
   --gray-600: #6B6B6B;
   --gray-700: #525252;
-  --gray-900: ##1F1F1F;
+  --gray-900: #1F1F1F;
   --yellow-50: #FFFCF6;
   --yellow-100: #FFF8EB;
   --yellow-200: #FEEECD;
