--- a/Sparc2/Sparc2/Catalog/ProductPurchase.razor.scss
+++ b/Sparc2/Sparc2/Catalog/ProductPurchase.razor.scss
@@ -95,7 +95,7 @@
                         letter-spacing: -0.12px;
                     }
 
-                    input {
+                    input, select {
                         display: flex;
                         padding: 16px;
                         flex-direction: column;
