--- a/Sparc2/Sparc2/_Imports.razor
+++ b/Sparc2/Sparc2/_Imports.razor
@@ -17,6 +17,7 @@
 @using Sparc2.Profile
 @using Sparc2.Products
 @using Sparc.Blossom.Api
+@using Sparc.Blossom.Billing
 @using Idea = Sparc.Blossom.Api.ProjectIdea
 @using File = Sparc.Blossom.Api.FileUpload
 @using Product = Sparc.Blossom.Api.Product
