Fix merge conflicts

--- a/Sparc2/Sparc2/Catalog/ProductPurchasePrices.razor
+++ b/Sparc2/Sparc2/Catalog/ProductPurchasePrices.razor
@@ -10,9 +10,9 @@
         </select>
     </label>
 </div>
-<div class="form-group">
+<div class="form-group amount">
     <label>
-        <span>Amount (USD)</span>
+        <span>Amount (@($"{GetCurrencySymbol(Order.Currency)}"))</span>
     </label>
     <div class="amount-grid">
         @foreach (var amount in ConvertedPrices.OrderBy(x => x))
