--- a/Sparc2/Sparc2/Catalog/Purchase/ProductPurchasePrices.razor
+++ b/Sparc2/Sparc2/Catalog/Purchase/ProductPurchasePrices.razor
@@ -2,10 +2,11 @@
 <div class="form-group">
     <label>
         <span>Currency *</span>
-        <select value="Order.Currency" @onchange="OnCurrencyChanged">
+        <select value="@Order.Currency" @onchange="OnCurrencyChanged">
             @foreach (var cur in CurrencyOptions ?? Enumerable.Empty<string>())
             {
-                <option value="@cur">@cur.ToUpper()</option>
+                @* <option value="@cur">@cur.ToUpper()</option> *@
+                <option value="@cur" selected="@(Order.Currency == cur ? "selected" : null)">@cur.ToUpper()</option>
             }                            
         </select>
     </label>
