--- a/Sparc2/Sparc2/Catalog/ProductPurchase.razor.css
+++ b/Sparc2/Sparc2/Catalog/ProductPurchase.razor.css
@@ -208,6 +208,12 @@
 .product-purchase form section.payment-section label select {
   width: 50%;
 }
+.product-purchase form section.summary-section {
+  padding: 32px;
+  border-radius: 32px;
+  background: var(--yellow-50);
+  box-shadow: 0px 0px 2px 0px rgba(26, 12, 50, 0.1), 0px 0px 4px 0px rgba(26, 12, 50, 0.2);
+}
 .product-purchase form .btn {
   padding: 8px 16px;
   border-radius: 100px;
