--- a/Sparc2/Sparc2/_Imports.razor
+++ b/Sparc2/Sparc2/_Imports.razor
@@ -16,6 +16,7 @@
 @using Sparc2.Ideas
 @using Sparc2.Profile
 @using Sparc2.Products
+@using Sparc2.Catalog.Purchase
 @using Sparc.Blossom.Api
 @using Sparc.Blossom.Billing
 @using Idea = Sparc.Blossom.Api.ProjectIdea
