--- a/Sparc2/Sparc2/Html.razor
+++ b/Sparc2/Sparc2/Html.razor
@@ -25,6 +25,7 @@
     <script src="js/dragging.js"></script>
     <script src="js/scrolling.js"></script>
     <script src="js/catalog.js"></script>
+    <script src="js/morph.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js"></script>
     <script src="https://localhost:7185/SparcEngineAuthenticator.js"></script>
@@ -34,7 +35,7 @@
          gsap.registerPlugin(ScrollTrigger)
          // gsap code here!
         });
-
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/kute.js/2.0.0/kute.min.js"></script>
 </body>
 </html>
